--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-aria/combobox": "^0.2.7",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.3.15",
     "@react-navigation/native": "^7.1.11",
     "@react-navigation/native-stack": "^7.3.15",
+    "@reduxjs/toolkit": "^2.8.2",
     "native-base": "^3.4.28",
     "react": "19.0.0",
     "react-native": "0.79.3",
@@ -21,6 +23,7 @@
     "react-native-screens": "^4.11.1",
     "react-native-svg": "^15.12.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.2.0",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
