--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-aria/combobox": "^0.2.7",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.3.15",
     "@react-navigation/native": "^7.1.11",
@@ -19,6 +18,7 @@
     "native-base": "^3.4.28",
     "react": "19.0.0",
     "react-native": "0.79.3",
+    "react-native-fast-image": "^8.6.3",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.1",
     "react-native-svg": "^15.12.0",
