added change nick name component

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "native-base": "^3.4.28",
     "react": "19.0.0",
+    "react-hook-form": "^7.59.0",
     "react-native": "0.79.3",
     "react-native-fast-image": "^8.6.3",
     "react-native-linear-gradient": "^2.8.3",
